--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
 	"name": "azure-devops-yaml-pipeline-validator",
-	"displayName": "Azure DevOps YAML Pipeline Validator",
-	"description": "Validated Azure DevOps YAML Pipelines",
-	"version": "0.0.1",
+	"displayName": "Azure Pipelines YAML Validator",
+	"description": "Validates Azure DevOps YAML Pipelines",
+	"author": {
+		"name": "Tom Austin"
+	},
+	"publisher": "Tom Austin",
+	"license": "MIT",
+	"icon": "images/icon.png",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/tomaustin700/YAML-Pipeline-Validator-VS-Code-Extension"
+	},
+	"bugs": {
+		"url": "https://github.com/tomaustin700/YAML-Pipeline-Validator-VS-Code-Extension/issues"
+	},
+	"version": "1.0.0",
 	"engines": {
 		"vscode": "^1.48.0"
 	},
@@ -17,7 +30,7 @@
 		"commands": [
 			{
 				"command": "azure-devops-yaml-pipeline-validator.validate",
-				"title": "Validate"
+				"title": "Azure Pipelines YAML Validator: Validate"
 			}
 		],
 		"menus": {
