--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"target": "es6",
 		"outDir": "out",
 		"lib": [
-			"es6"
+			"es6",
+			"dom"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
@@ -18,4 +19,5 @@
 		"node_modules",
 		".vscode-test"
 	]
+	
 }
